[package]
name = "sensitive"
version = "0.6.0"
authors = [ "Mikael Voss <mvs@nyantec.com>" ]
edition = "2018"
description = "Memory allocator for sensitive information"
repository = "https://github.com/illdefined/sensitive"
license = "MirOS"
keywords = [ "security" ]
categories = [ "memory-management" ]

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [ "memoryapi", "sysinfoapi", "winnt" ] }

[dev-dependencies]
num_cpus = "1.13"
rand = "0.8"

[target.'cfg(unix)'.dev-dependencies]
bulletproof = "0.2"

[profile.release]
lto = true
