[package]
name = "sensitive"
version = "0.10.3"
authors = ["Mikael Voss <mvs@nyantec.com>"]
edition = "2021"
description = "Memory allocator for sensitive information"
repository = "https://github.com/illdefined/sensitive"
license = "CC0-1.0"
keywords = ["security"]
categories = ["memory-management"]

[features]
default = ["string"]
force-mlock = []
string = ["unicode-normalization"]

[dependencies]
ctor = "0.3"
unicode-normalization = { version = "0.1", optional = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["memoryapi", "sysinfoapi", "winnt"] }

[dev-dependencies]
rand = "0.9"
rand_xoshiro = "0.7"

[target.'cfg(target_os = "linux")'.dev-dependencies]
bulletproof = "0.2"

[profile.release]
lto = true

[profile.test]
opt-level = 1
lto = "thin"

[profile.bench]
lto = "thin"
